[feat] virtual thread dead lock found