@@ -1,12 +1,11 @@
 package Semaphore;
 
 public class CaseTestRunner {
-    public void run(){
-        SharedResource sharedResource = new SharedResource(5);
+    public void run() throws InterruptedException {
+        SharedResource sharedResource = new SharedResource(1);
         for (int i = 0; i < 100; i++) {
-            Thread thread = new Thread(new ThreadRunner(sharedResource));
-            thread.start();
-//            System.out.println("thread in state " + thread.getState());
+            Thread virtualThread = new Thread(new SemaphoreTestThread(sharedResource));
+            Thread.startVirtualThread(virtualThread);
         }
     }
 }
